--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Comatible" content="ie=edge">
     <title>Excursion</title>
-    <link rel="stylesheet" type="text/css" href="/excursion/resources/css/">
+    <link rel="stylesheet" type="text/css" href="/excursion/resources/css/style.css"> 
 </head>
+
 
 <body>
 <h1> Discover hidden places in the world around you around you </h1>
