--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1 class="header--main"> Discover hidden places in the world around you around you </h1>
 
-<p> <a href="#"> Download Excursion (Coming soon!)  </a> </p>
+<p> <a class="link--cta" href="#"> Download Excursion (Coming soon!)  </a> </p>
     
 
 
