--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <p> <a class="link--cta" href="#"> Download Excursion (Coming soon!)  </a> </p>
     
+<video autoplay loop  muted>
+ <source src="resources/videos/excursion.mp4" type="video/mp4" /> 
 
+</video>
 
 
 
