--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     
 <video autoplay loop  muted>
  <source src="resources/videos/excursion.mp4" type="video/mp4" /> 
-
 </video>
 
+<h2 class="header--secondary"> Your personal travel guide</h2>
+<h4 class="header--subheader"> Excursion remembers places youn like, and recommends new points of interest around you.</h4>
 
 
 
