--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <h4 class="header--subheader"> Comimg Soon for iPhone and Android </h4>
     <p> <a class="link--cta" href="#"> Download Excursion (Coming soon!) </a> </p>
+    <p class="footer--copyright"> &copy; Excursion </a> </p>
 </body>
 
 
